Add .gitignore to exclude unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-venv/
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+ENV/
+env/
+.venv/
+
+# IDE files
+.vscode/
+.idea/
+
+# Logs
+*.log
+
+# OS files
 .DS_Store
+Thumbs.db
